--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,27 +9,26 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#485ea1ff",
-    "activityBar.activeBorder": "#485ea1ff",
-    "activityBar.background": "#485ea1ff",
-    "activityBar.foreground": "#d1d7e8ff",
-    "activityBar.inactiveForeground": "#8d9bc5ff",
-    "activityBarBadge.background": "#1a368aff",
-    "activityBarBadge.foreground": "#bac3dcff",
-    "sash.hoverBorder": "#a3afd0ff",
-    "statusBar.background": "#5f72adff",
-    "statusBar.foreground": "#d1d7e8ff",
-    "statusBarItem.hoverBackground": "#5f72adff",
-    "statusBarItem.remoteBackground": "#5f72adff",
-    "statusBarItem.remoteForeground": "#d1d7e8ff",
-    "titleBar.activeBackground": "#1a368aff",
-    "titleBar.activeForeground": "#bac3dcff",
-    "titleBar.inactiveBackground": "#5f72adff",
-    "titleBar.inactiveForeground": "#8d9bc5ff",
-    "tab.activeBorder": "#7686b9ff",
-    "commandCenter.border": "#a3afd0ff"
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#82aba5",
+    "statusBar.background": "#64968e",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#507771",
+    "statusBarItem.remoteBackground": "#64968e",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#64968e",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#64968e99",
+    "titleBar.inactiveForeground": "#15202b99",
+    "tab.activeBorder": "#82aba5",
+    "activityBar.activeBackground": "#82aba5",
+    "activityBar.background": "#82aba5",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#f1ecf2",
+    "activityBarBadge.foreground": "#15202b"
   },
-  "peacock.color": "#796e0e",
+  "peacock.color": "#64968e",
   "likan.string.manager": "yarn",
   "svg.preview.background": "black"
 }
