feat: 链接编辑支持.字符, 额外在js, ts, jsx, tsx中的<>标记为括号对, 重构执行命令部分, 现在是一个tree view

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,6 @@
     "activityBarBadge.foreground": "#15202b"
   },
   "peacock.color": "#64968e",
-  "likan.string.manager": "yarn",
+  "likan.enum.manager": "yarn",
   "svg.preview.background": "black"
 }
