docs: 修改描述文件

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,15 @@
-.editorconfig
-.eslintrc.js
-.gitignore
-.prettierrc.js
-.versionrc.js
-.yarnrc
-tsconfig.json
-webpack.config.js
-yarn.lock
-
 .github/**
 .vscode/**
 node_modules/**
 src/**
+public/images/**
+!public/images/likan.png
+
+.editorconfig
+.eslintrc.js
+.gitignore
+.prettierrc.js
+.yarnrc
+tsconfig.json
+webpack.config.js
+yarn.lock
