--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,26 +9,26 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#82aba5",
-    "statusBar.background": "#64968e",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#507771",
-    "statusBarItem.remoteBackground": "#64968e",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#64968e",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#64968e99",
-    "titleBar.inactiveForeground": "#15202b99",
-    "tab.activeBorder": "#82aba5",
-    "activityBar.activeBackground": "#82aba5",
-    "activityBar.background": "#82aba5",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#f1ecf2",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#4c67de",
+    "statusBar.background": "#2646d1",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#4c67de",
+    "statusBarItem.remoteBackground": "#2646d1",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#2646d1",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#2646d199",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "tab.activeBorder": "#4c67de",
+    "activityBar.activeBackground": "#4c67de",
+    "activityBar.background": "#4c67de",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#eb93a4",
     "activityBarBadge.foreground": "#15202b"
   },
-  "peacock.color": "#64968e",
-  "likan.enum.manager": "yarn",
+  "peacock.color": "#2646d1",
+  "likan.enum.manager": "pnpm",
   "svg.preview.background": "black"
 }
