--- a/package.json
+++ b/package.json
@@ -389,7 +389,7 @@
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.4",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
@@ -399,12 +399,7 @@
   },
   "standard-version": {
     "scripts": {
-      "prerelease": "git add ."
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
+      "precommit": "git add ."
     }
   },
   "volta": {
