--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "0.8.80",
+  "version": "0.8.81",
   "author": {
     "name": "likan"
   },
@@ -362,16 +362,16 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "run-s format package",
-    "package": "cross-env NODE_ENV=production webpack --profile --progress",
+    "vscode:prepublish": "run-s package",
+    "package": "cross-env NODE_ENV=production webpack",
     "develop": "cross-env NODE_ENV=development webpack --watch",
     "preview": "cross-env NODE_ENV=test webpack --profile --progress",
     "release": "standard-version -a -r patch",
     "commit": "cz",
     "format": "prettier ./*.js ./src/**/* -w -u --cache",
+    "fix": "run-s format lint",
     "lint": "eslint ./src/**/* --fix --quiet --cache --cache-location ./node_modules/.cache/eslint/.eslintcache --cache-strategy content",
-    "precommit": "run-s format lint",
-    "prerelease": "run-s format lint"
+    "precommit": "run-s fix"
   },
   "devDependencies": {
     "@types/vscode": "^1.66.0",
@@ -389,7 +389,7 @@
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
-    "typescript": "4.7.4",
+    "typescript": "~4.7",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
@@ -399,7 +399,8 @@
   },
   "standard-version": {
     "scripts": {
-      "precommit": "git add ."
+      "precommit": "git add .",
+      "prerelease": "npm run fix"
     }
   },
   "volta": {
