--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.17.0
-          cache: pnpm
+          cache: "pnpm"
           cache-dependency-path: |
             "**/package-lock.json"
             "**/pnpm-lock.yaml"
