--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,16 +19,21 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 7.9.3
-          run_install: |
-            - args: [--frozen-lockfile, --registry, https://registry.npmjs.org]
+          run_install: false
 
-      - uses: actions/setup-node@v3
+      - id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
         with:
-          node-version: 16.17.0
-          cache: "pnpm"
-          cache-dependency-path: |
-            "**/package-lock.json"
-            "**/pnpm-lock.yaml"
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - run: pnpm install --frozen-lockfile --registry=https://registry.npmjs.org
 
       - uses: lannonbr/vsce-action@3.0.0
         with:
