--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,9 +37,9 @@ jobs:
 
       - uses: lannonbr/vsce-action@3.0.0
         with:
-          args: publish -p $LOGIN_TOKEN --no-dependencies
-
-      - run: vsce package --no-dependencies
+          args: |
+            publish -p $LOGIN_TOKEN --no-dependencies
+            package --no-dependencies
 
       - uses: softprops/action-gh-release@v1
         with:
