--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,12 +36,11 @@ jobs:
 
       - run: pnpm install --frozen-lockfile --registry=https://registry.npmjs.org
 
-      - uses: lannonbr/vsce-action@3.0.0
-        with:
-          args: "publish -p $LOGIN_TOKEN --no-dependencies"
+      # - uses: lannonbr/vsce-action@3.0.0
+      #   with:
+      #     args: "publish -p $LOGIN_TOKEN --no-dependencies"
 
       - run: vsce package --no-dependencies
       - uses: softprops/action-gh-release@v1
         with:
-          files: |
-            Likan-$TAG.vsix
+          files: Likan-$TAG.vsix
