--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
     name: publish
     runs-on: ubuntu-latest
     steps:
+      - run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
@@ -39,4 +41,4 @@ jobs:
       - run: vsce package --no-dependencies
       - uses: softprops/action-gh-release@v1
         with:
-          files: Likan-${{GITHUB_REF:10}}.vsix
+          files: Likan-${{env.RELEASE_VERSION}}.vsix
