--- a/package.json
+++ b/package.json
@@ -362,16 +362,16 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "run-s package",
+    "vscode:prepublish": "pnpm package",
     "package": "cross-env NODE_ENV=production webpack",
     "develop": "cross-env NODE_ENV=development webpack --watch",
     "preview": "cross-env NODE_ENV=test webpack --profile --progress",
     "release": "standard-version -a -r patch",
     "commit": "cz",
     "format": "prettier ./*.js ./src/**/* -w -u --cache",
-    "fix": "run-s format lint",
+    "fix": "pnpm format && pnpm lint",
     "lint": "eslint ./src/**/* --fix --quiet --cache --cache-location ./node_modules/.cache/eslint/.eslintcache --cache-strategy content",
-    "precommit": "run-s fix"
+    "precommit": "pnpm fix"
   },
   "devDependencies": {
     "@types/vscode": "^1.66.0",
@@ -385,7 +385,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
@@ -396,6 +395,11 @@
   },
   "dependencies": {
     "open": "^8.4.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "standard-version": {
     "scripts": {
