--- a/public/configurations/language-configuration.json
+++ b/public/configurations/language-configuration.json
@@ -46,8 +46,7 @@
     },
     {
       "open": "<",
-      "close": ">",
-      "notIn": ["string"]
+      "close": ">"
     }
   ],
   "surroundingPairs": [
