--- a/public/configurations/tags-language-configuration.json
+++ b/public/configurations/tags-language-configuration.json
@@ -43,8 +43,7 @@
     },
     {
       "open": "<",
-      "close": ">",
-      "notIn": ["string"]
+      "close": ">"
     }
   ],
   "surroundingPairs": [
