feat: 新增对xml, svg链接标记的支持

--- a/package.json
+++ b/package.json
@@ -317,7 +317,8 @@
             ".js",
             ".ts",
             ".jsx",
-            ".tsx"
+            ".tsx",
+            ".vue"
           ]
         },
         "likan.list.alias": {
@@ -338,7 +339,8 @@
           "default": [
             "node_modules",
             ".vscode",
-            ".git"
+            ".git",
+            ".svn"
           ]
         }
       }
